# rpa-fritvalg

./: @AutomationLog.txt  main.py  pyproject.toml
helpers/: ats_functions.py  config.py  helper_functions.py  solteq_helper.py
processes/: process_item.py
