[project]
name = "rpa-fritvalg"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client @ git+https://github.com/odense-rpa/automation-server-client.git",
    "itk_dev_shared_components",
    "mbu-dev-shared-components>=3.0.0",
    "mbu_msoffice_integration>=1.0.1",
    "mbu-process-dashboard-shared-components>=1.3.0",
    "mbu-rpa-core",
    "mbu-solteqtand-shared-components>=1.5.0",
    "openpyxl",
    "pandas",
    "pillow",
    "psutil",
    "ruff",
    "sqlalchemy >= 2.0.20",
    "sqlalchemy[asyncio] >= 2.0.20",
    "tzdata",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.0" }

[tool.setuptools]
py-modules = []
